<resources>
    <string name="app_name">MVCApplication</string>
    <string name="action_settings">Search</string>
    <string name="test_name">By DAVID LEONHART anf STUAR A.</string>
    <string name="thompson_thompson">THOMPSON THOMPSON</string>
    <string name="date_test">2017-06-23</string>
    <string name="title_test">Supporters of the Democractic Candidate Jon ossoff after his string manip</string>
    <string name="right_arrow">right arrow</string>
    <string name="circle_image">Circle image</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="ny_value">mEWJG6smz7nLYFhre9kgoOLfgQ3ulBAM</string>
    <string name="error">Error While connecting to server</string>
    <string name="app_item_detail_name">Article Details</string>
    <string name="sample_popular_article">Sample Popular Article</string>
    <string name="sampl_email_com">sampl@email.com</string>
</resources>