<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item_body"
    android:foreground="@drawable/ripple_effect"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/thumb_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/circle_image"
        android:src="@drawable/grey_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/right_arrow_imv"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toEndOf="@+id/thumb_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_test" />

    <ImageView
        android:id="@+id/right_arrow_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/byTxv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/headline_text"
        app:layout_constraintStart_toStartOf="@+id/headline_text"
        app:layout_constraintTop_toBottomOf="@+id/headline_text"
        tools:text="@string/test_name" />

    <TextView
        android:id="@+id/sourceTxv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/thompson_thompson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dateTxv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/byTxv"
        app:layout_constraintTop_toBottomOf="@+id/byTxv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dateTxv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="4dp"
        android:text="@string/date_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/byTxv"
        app:layout_constraintStart_toEndOf="@+id/sourceTxv"
        app:layout_constraintTop_toBottomOf="@+id/byTxv" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>